--- a/Topicos/Topicos.csproj
+++ b/Topicos/Topicos.csproj
@@ -137,17 +137,23 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ProdutoController.cs" />
+    <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\BaseModel.cs" />
+    <Compile Include="Models\CarrinhoModel.cs" />
+    <Compile Include="Models\CarrinhoProdutoModel.cs" />
     <Compile Include="Models\CategoriasRetorno.cs" />
     <Compile Include="Models\ContextTopicos.cs" />
+    <Compile Include="Models\EnderecoModel.cs" />
     <Compile Include="Models\Enums\CategoriaProduto.cs" />
     <Compile Include="Models\Enums\PerfilUsuario.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\ProdutoModel.cs" />
     <Compile Include="Models\UsuarioModel.cs" />
+    <Compile Include="Models\VendaItemModel.cs" />
+    <Compile Include="Models\VendaModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -201,6 +207,7 @@
     <Content Include="Views\Shared\Footer.cshtml" />
     <Content Include="Views\Shared\MainHeader.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\Usuario\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
