--- a/Topicos/Topicos.csproj
+++ b/Topicos/Topicos.csproj
@@ -208,6 +208,7 @@
     <Content Include="Views\Shared\MainHeader.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Usuario\Index.cshtml" />
+    <Content Include="Views\Usuario\Edit.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
