--- a/Topicos/Topicos.csproj
+++ b/Topicos/Topicos.csproj
@@ -145,7 +145,7 @@
     </Compile>
     <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\CarrinhoModel.cs" />
-    <Compile Include="Models\CarrinhoProdutoModel.cs" />
+    <Compile Include="Models\CarrinhoItemModel.cs" />
     <Compile Include="Models\CategoriasRetorno.cs" />
     <Compile Include="Models\ContextTopicos.cs" />
     <Compile Include="Models\EnderecoModel.cs" />
@@ -155,7 +155,6 @@
     <Compile Include="Models\ProdutoModel.cs" />
     <Compile Include="Models\UsuarioLogado.cs" />
     <Compile Include="Models\UsuarioModel.cs" />
-    <Compile Include="Models\VendaItemModel.cs" />
     <Compile Include="Models\VendaModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -205,7 +204,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Images\Produtos\" />
     <Folder Include="Views\Base\" />
-    <Folder Include="Views\Carrinho\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -214,6 +212,7 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Usuario\Index.cshtml" />
     <Content Include="Views\Usuario\Edit.cshtml" />
+    <Content Include="Views\Carrinho\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
